[package]
name = "gestures"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Libinput based touchpad gestures program"
repository = "https://github.com/ferstar/gestures"
keywords = ["touchpad", "gestures", "libinput", "multitouch", "linux"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
input = "0.9.0"
nix = {version = "0.27.1", features = ["poll", "fs"]}
anyhow = "1.0.79"
regex = "1.10.3"
log = "0.4.18"
env_logger = "0.11.1"
miette = { version = "5.10.0", features = ["fancy"] }
knuffel = "3.2.0"
libxdo = "0.6.0"
timer = "0.2.0"
chrono = "0.4.33"
ctrlc = "3.4.2"
