[package]
name = "gestures"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Libinput based touchpad gestures program"
repository = "https://github.com/ferstar/gestures"
keywords = ["touchpad", "gestures", "libinput", "multitouch", "linux"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
input = "0.9.1"
nix = {version = "0.29.0", features = ["poll", "fs"]}
anyhow = "1.0.93"
regex = "1.11.1"
log = "0.4.22"
env_logger = "0.11.5"
miette = { version = "7.2.0", features = ["fancy"] }
knuffel = "3.2.0"
libxdo = "0.6.0"
timer = "0.2.0"
chrono = "0.4.38"
ctrlc = "3.4.5"
