[package]
name = "gestures"
version = "0.8.3"
edition = "2021"
license = "MIT"
description = "Libinput based touchpad gestures program"
repository = "https://github.com/ferstar/gestures"
keywords = ["touchpad", "gestures", "libinput", "multitouch", "linux"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
env_logger = { version = "0.11", features = ["auto-color"] }
input = "0.9"
knuffel = "3.2"
libxdo = "0.6"
log = "0.4"
miette = { version = "7.6", features = ["fancy"] }
nix = { version = "0.31", features = ["poll", "fs"] }
once_cell = "1.21"
parking_lot = "0.12"
regex = "1.12"
signal-hook = "0.4"
threadpool = "1.8"
timer = "0.2"
